# sinz

./: .gpg.key  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac  testidentity.key  testidentity.key.pub
debian/: changelog  control  copyright  rules
src/: Makefile.am  setup.py  sinz.completion  sinz.py
src/sinz/: Plugin.py  PluginInitException.py  Singleton.py  Util.py
src/sinz/cli/: CLI.py  PluginManager.py  Registry.py
src/sinz/debian/: Debian.py
src/sinz/plugins/: Autoconf.py  BasicInfo.py  Debian.py  Drone.py  Git.py  GitModule.py  Gpg.py  Help.py  Identity.py  Travis.py
src/sinz/plugins/identity/: GitBranchIdentity.py  GitRepoIdentity.py  InTreeIdentity.py  SshIdentity.py
tests/tests/: ReloadedTestCase.py  TestProject.py  UtilTest.py
tests/tests/cli/: CLITest.py  RegistryTest.py
tests/tests/debian/: DebianTest.py
tests/tests/plugin/: AutoconfTest.py  BasicInfoTest.py  BasicInfotest.py  DebianTest.py  DebianTest2.py  GitTest.py  GitTest2.py  GpgTest.py  IdentityTest.py  TravisTest.py
